--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 </head>
 <body>
     <div class="contenedor grid">
-        <div class="cuadro">X</div>
-        <div class="cuadro">X</div>
-        <div class="cuadro">X</div>
-        <div class="cuadro">X</div>
-        <div class="cuadro">X</div>
-        <div class="cuadro">X</div>
-        <div class="cuadro">X</div>
-        <div class="cuadro">X</div>
-        <div class="cuadro">X</div> 
+        <div class="cuadro"></div>
+        <div class="cuadro"></div>
+        <div class="cuadro"></div>
+        <div class="cuadro"></div>
+        <div class="cuadro"></div>
+        <div class="cuadro"></div>
+        <div class="cuadro"></div>
+        <div class="cuadro"></div>
+        <div class="cuadro"></div> 
     </div>
 
     <script src="JS/jquery.js"></script>
